EINK: EinkService and framework,refresh button
Signed-off-by: zj <zj@rock-chips.com>
Change-Id: I8479f3504abf07296647db8e0d4a39c0f0bfc178

--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -304,6 +304,8 @@
 
     <!-- Content description of the back button for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
     <string name="accessibility_back">Back</string>
+
+    <string name="accessibility_refresh">Refresh</string>
     <!-- Content description of the home button for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
     <string name="accessibility_home">Home</string>
     <!-- Content description of the menu button for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
