--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -302,6 +302,7 @@
     <string name="accessibility_back">Back</string>
 
     <string name="accessibility_refresh">Refresh</string>
+    <string name="accessibility_switch_mode">Switch mode</string>
     <!-- Content description of the home button for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
     <string name="accessibility_home">Home</string>
     <!-- Content description of the menu button for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
