--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -303,6 +303,7 @@
 
     <string name="accessibility_refresh">Refresh</string>
     <string name="accessibility_switch_mode">Switch mode</string>
+    <string name="accessibility_eink_menu">Eink menu</string>
     <!-- Content description of the home button for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
     <string name="accessibility_home">Home</string>
     <!-- Content description of the menu button for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
@@ -2882,4 +2883,16 @@
     <!-- Text to display in a notification when ACTION_BATTERY_CHANGED.EXTRA_PRESENT field is false
     [CHAR LIMIT=NONE] -->
     <string name="battery_state_unknown_notification_text">Tap for more information</string>
+
+    <string name="eink_app_optimize">App Optimize</string>
+    <string name="eink_dpi_setting">DPI Setting</string>
+    <string name="eink_animation_setting">Animation Setting</string>
+    <string name="eink_contrast_setting">Contrast Setting</string>
+    <string name="eink_refresh_setting">Refresh Setting</string>
+    <string name="eink_refresh_mode">Refresh Mode</string>
+    <string name="eink_common_mode">Common Mode</string>
+    <string name="eink_auto_mode">Auto Mode</string>
+    <string name="eink_a2_mode">A2 Mode</string>
+    <string name="eink_refresh_frequency">Refresh Frequency</string>
+    <string name="eink_app_bleach">App Bleach</string>
 </resources>
