SystemUI: update app eink config dialog
1. launcher3 not allow to display app eink config dialog
2. recent,home and other key event need dismiss app eink config dialog

Signed-off-by: wh <wanghang@rock-chips.com>
Change-Id: I00b12502e91019147bdf4297243009573295e606
Signed-off-by: Joe Maples <joe@maples.dev>

--- a/packages/SystemUI/res/values-zh-rCN/strings.xml
+++ b/packages/SystemUI/res/values-zh-rCN/strings.xml
@@ -1115,4 +1115,5 @@
     <string name="eink_app_bleach_icon_color">"图标颜色"</string>
     <string name="eink_app_bleach_cover_color">"封面颜色"</string>
     <string name="eink_app_bleach_bg_color">"背景颜色"</string>
+    <string name="eink_dialog_not_allow">"当前界面不允许进行配置"</string>
 </resources>
